--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Rajaram Kuberan</title>
+  <title>Ramanathan Perumal</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -29,8 +29,8 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- For link sharing-->
-  <meta property="og:title" content="Rajaram Kuberan" />
-  <meta property="og:description" content="AI Architect" />
+  <meta property="og:title" content="Ramanathan Perumal" />
+  <meta property="og:description" content="AI Engineer" />
   <meta property="og:url" content="https://kn1ghtf1re.github.io" />
   <meta property="og:image" content="https://github.com/kn1ghtf1re/kn1ghtf1re.github.io/assets/img/dp.png" />
 </head>
@@ -46,11 +46,11 @@
 
       <div class="profile">
         <img src="assets/img/prof_1.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Rajaram Kuberan</a></h1>
+        <h1 class="text-light"><a href="index.html">Ramanathan Perumal</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="https://twitter.com/kn1ghtf1re20" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-          <a href="https://in.linkedin.com/in/rajaramkuberan/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-          <a href="https://github.com/rajaramkuberan" class="github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/ramanathan-perumal/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/RamGitRepo" class="github"><i class="bx bxl-github"></i></a>
           <!-- <a href="https://www.instagram.com/kn1ght_f1re" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://discord.gg/XfAwrp5" class="discord"><i class="bx bxl-discord"></i></a>
           <a href="https://akash-james.medium.com/" class="medium"><i class="bx bxl-medium"></i></a> -->
@@ -87,9 +87,9 @@
   <!-- ======= Introduction Section ======= -->
   <section id="introduction" class="d-flex flex-column justify-content-center align-items-center">
     <div class="introduction-container" data-aos="fade-in">
-      <h1>Rajaram Kuberan</h1>
+      <h1>Ramanathan Perumal</h1>
       <p><span class="typed"
-          data-typed-items="AI Architect , ML/MLOPS Engineer, Computer Vision Engineer , Data Professional, Data Engineer , Oracle DBA , Business Development Consultant"></span>
+          data-typed-items="AI Engineer , LLMOPS Engineer, Data Engineer , Java Engineer"></span>
       </p>
     </div>
   </section><!-- End Introduction -->
@@ -102,13 +102,18 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>As a seasoned AI professional with extensive experience in developing and deploying scalable AI solutions,
-            I have led numerous projects across various industries, including Retail, Healthcare, Supply Chain and Smart Cities. My
-            expertise in cloud environments (AWS, Azure), MLOps, and AI optimization, coupled with a strong background
-            in client interaction and project management, positions me as a strategic leader in the AI consultancy
-            space. Moreover, I have worked on and supported many freelancing projects. As an architect, I
-            simplify and convey complex topics to nontechnical
-            business persons and stakeholders to attain organizational goals.
+          <p>Versatile AI technologist passionate about transforming real-world challenges into intelligent, scalable solutions 
+            through data, AI automation, and machine learning. Adept at bridging business goals with technical implementation 
+            to drive innovation and value across industries. An AI Engineer specializing in building end-to-end AI systems powered 
+            by large language models (LLMs), retrieval-augmented generation (RAG), and cloud-native data platforms. 
+            Hands-on experience with tools like Azure OpenAI, LangChain, Semantic Kernel, and Databricks to deliver intelligent search, 
+            document understanding, and conversational AI solutions.
+
+            Bringing deep cross-domain experience in:
+            🔹 Oil & Gas – cloud-native lakehouses, real-time analytics, threat detection
+            🔹 Capital Markets – risk systems modernization, secure enterprise data solutions
+            🔹 Retail & E-commerce – intelligent search, summarization, customer-facing bots
+            🔹 Asset Management – large-scale data systems, SSO/LDAP integration
             <!--As a professional in Artificial Intelligence Product Development and Data Product Development, I have a
             wide range of expertise in design, development and deployment of scalable AI solutions in Internet of Things
             (IoT) environment and Hybrid Environment (on-premise & Cloud). I have streamlined data management, data
@@ -128,10 +133,8 @@
               <div class="col-lg-6">
                 <ul>
                   <!--<li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>2nd June, 1993</span></li>-->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Work Phone:</strong> <span>+44 7897769910</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Mobile:</strong> <span>+44 7587718431</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>United
-                      Kingdom</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Mobile:</strong> <span>+44 7553475418</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>United Kingdom</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -139,7 +142,7 @@
                   <!--<li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>-->
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>MSc Data Science and
                       Computational Intelligence</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>rajaram.kuberan@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>ramanath.perumal@gmail.com</span>
                   </li>
                 </ul>
               </div>
