architecture imgaes uploaded

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="introduction-container" data-aos="fade-in">
       <h1>Ramanathan Perumal</h1>
       <p><span class="typed"
-          data-typed-items="AI Engineer , LLMOPS Engineer, Data Engineer , Java Engineer"></span>
+          data-typed-items="AI Engineer , LLMOps Engineer, Data Engineer , Java Engineer"></span>
       </p>
     </div>
   </section><!-- End Introduction -->
