projects and cert changes

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/E2E_Project/Edge%26AWSCloud"
                   target="_blank">
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
-                  <div class="project-topic">MLOPS - IOT</div>
+                  <div class="project-topic">LLMOps - Chat Assistant</div>
                 </a>
               </div>
             </div>
@@ -180,29 +180,6 @@
                   target="_blank">
                   <img src="assets/img/genai.png" alt="Image 2" class="project-image">
                   <div class="project-topic">UCD-LLM</div>
-                </a>
-              </div>
-            </div>
-
-
-            <div class="swiper-slide">
-              <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/Face_Recognition"
-                  target="_blank">
-                  <img src="assets/img/face.png" alt="Image 3" class="project-image">
-                  <div class="project-topic">Face Recognition</div>
-                </a>
-              </div>
-            </div>
-
-
-
-            <div class="swiper-slide">
-              <div class="cont-item" data-aos="fade-right">
-                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/AI_Sensor_Fusion_Project"
-                  target="_blank">
-                  <img src="assets/img/ratci.png" alt="Image 4" class="project-image">
-                  <div class="project-topic">AI Sensor Fusion</div>
                 </a>
               </div>
             </div>
@@ -274,121 +251,6 @@
 
               </div>
             </div>
-
-            <p><em></em></p>
-            <h4><b>LLM RAG Project - Retail</b></h4>
-            <ul>
-              <li>Developed RAG applications for inventory management to ensure sufficient product stock for business
-                operations</li>
-            </ul>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Technical Skills</h2>
-              <div class="flex-container">
-                <div class="flex-box">Large Language Models</div>
-                <div class="flex-box">Vector Database</div>
-                <div class="flex-box">Data Lake</div>
-              </div>
-            </div>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Tools and Technologies</h2>
-              <div class="flex-container">
-                <div class="flex-box">Autogen & CrewAI</div>
-                <div class="flex-box">Langchain</div>
-                <div class="flex-box">OpenAI</div>
-                <div class="flex-box">ChromaDB</div>
-              </div>
-            </div>
-
-
-            <p><em></em></p>
-            <h4><b>Breach Analytics & Reporting Project- Healthcare</b></h4>
-            <ul>
-              <li>Provided consultancy services to develop analytics and reporting systems for enabling faster treatment
-                responses</li>
-              <li>Suggested changes on hospital applications to enhance the Data Integrity of the hospital processes to
-                zero down the treatment breaches</li>
-            </ul>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Technical Skills</h2>
-              <div class="flex-container">
-                <div class="flex-box">Data Analytics</div>
-                <div class="flex-box">BI Reporting</div>
-                <div class="flex-box">Anomaly Detection</div>
-              </div>
-            </div>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Tools and Technologies</h2>
-              <div class="flex-container">
-                <div class="flex-box">Python</div>
-                <div class="flex-box">Pandas</div>
-                <div class="flex-box">Power BI</div>
-                <div class="flex-box">Flask & Fast API</div>
-              </div>
-            </div>
-
-            <p><em></em></p>
-            <h4><b>Data Retrieval and Storage Project - Manufacturing</b></h4>
-            <ul>
-              <li>Developed a data retrieval and storage system to manage diverse data sources efficiently</li>
-              <li>Designed and implemented a polyglot data retrieval solution to handle structured and unstructured data
-              </li>
-              <li>Enhanced data accessibility and usability, enabling seamless analysis across disparate datasets</li>
-            </ul>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Technical Skills</h2>
-              <div class="flex-container">
-                <div class="flex-box">Data Warehousing</div>
-                <div class="flex-box">Data Lake</div>
-                <div class="flex-box">Cloud Storage</div>
-              </div>
-            </div>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Tools and Technologies</h2>
-              <div class="flex-container">
-                <div class="flex-box">Azure Data Factory</div>
-                <div class="flex-box">Azure Blob Storage</div>
-                <div class="flex-box">Azure Synapse Analytics</div>
-              </div>
-            </div>
-
-            <p><em></em></p>
-            <h4><b>Time Series (Temporal) Data Analytics Project - Retail</b></h4>
-            <ul>
-              <li>Developed advanced analytics models to predict future sales trends and detect anomalies</li>
-              <li>Implemented machine learning algorithms for time series forecasting and anomaly detection</li>
-            </ul>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Technical Skills</h2>
-              <div class="flex-container">
-                <div class="flex-box">Machine Learning</div>
-                <div class="flex-box">Statistical Analysis</div>
-                <div class="flex-box">Data Visualization</div>
-              </div>
-            </div>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Tools and Technologies</h2>
-              <div class="flex-container">
-                <div class="flex-box">AWS Lambda - Python</div>
-                <div class="flex-box">AWS S3</div>
-                <div class="flex-box">AWS Athena</div>
-                <div class="flex-box">AWS Quicksight</div>
-              </div>
-            </div>
-            <p><em></em></p>
-            <h4><b>Mentor - UK Students</b></h4>
-            <ul>
-              <li>Mentored 15+ Master UK thesis projects in the fields of Artificial Intelligence, Machine Learning,
-                Data Analytics, and Data Management in the past 2 years</li>
-            </ul>
-
           </div>
 
         </div>
@@ -407,9 +269,9 @@
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <!-- <h3 class="resume-title">Professional Experience</h3> -->
           <div class="resume-item">
-            <h4>AI Architect</h4>
-            <h5>Aug'22 - Present</h5>
-            <p><em>Digital Assets & Transformation Solutions LLP, UK</em></p>
+            <h4>AI Engineer</h4>
+            <h5>Feb'22 - Mar2025</h5>
+            <p><em>Elastacloud Limited, UK</em></p>
             <ul>
               <li>Supervised and architected the development of the AI pipeline, aligning with the principles of Cloud
                 and Data architecture</li>
@@ -537,9 +399,9 @@
             </div>
           -->
           <div class="resume-item">
-            <h4>Data Associate</h4>
-            <h5>Mar'21 - Aug'22</h5>
-            <p><em>Amazon, UK</em></p>
+            <h4>AI/Data Engineer</h4>
+            <h5>Jun'21 - Jan'22</h5>
+            <p><em>BP(British Petroleum), UK</em></p>
             <h4><b>Productivity Project</b></h4>
             <ul>
               <li> Automated the report generation pipeline to monitor the associates productivity on the AWS platform,
@@ -674,53 +536,6 @@
               </div>
             </div>
           </div>
-
-          <div class="resume-item">
-            <h4>Consultant - Oracle Database and Infrastructure Administrator</h4>
-            <h5>Jun'14 - Feb'16</h5>
-            <p><em>Tata Consultancy Services, India</em></p>
-            <ul>
-              <li>Performed day-to-day activities of DBA in Oracle Database Environment</li>
-              <li>Created users and managed roles using DDL, and DCL operations by following IDRMS (Integrated Datafix
-                Request Management System) process in the production environment</li>
-              <li>Performed DML, and TCL operations during weekly Database Change Request(DBCR) activities</li>
-              <li>Performed Exploratory Data Analysis (EDA) using Oracle SQL Statistical functions</li>
-              <li>Performed visualization of OLAP and OLTP data using Oracle Business Intelligence Enterprise Edition
-                (OBIEE).</li>
-              <li>Derived Insights and generated reports using Oracle Data Miner (ODM) software</li>
-              <li>Performed data integrity analysis during export & import operations, after an ETL and Data Warehouse
-                operations with the help of Oracle SQL analytical functions and Oracle SQL Developer</li>
-              <li>Performed SQL Tuning in Oracle Database using SQL*plus and Oracle Enterprise Manager(OEM)</li>
-              <li>Incorporated better Data Abstraction by creating views and materialized views</li>
-              <li>Performed SQL Refactoring for time-consuming queries in the production database</li>
-              <li>Incorporated critical ITIL(ITSM) processes like Event Management, Incident Management, Problem
-                Management, Change Management, and Access Management to provide seamless data availability</li>
-              <li>Created Oracle Environmental documentation and provided Knowledge Transfer (KT) sessions for
-                entry-level DBAs</li>
-              <li>Generated weekly and monthly reports using the IDRMS tool, MS Excel, and MS PowerPoint to update the
-                onsite DBAs and Database Architects about the database activities and escalations</li>
-              <li>Improved Database performance by 20%-30% by doing refactoring of SQL queries fired by the application
-                or batch user</li>
-              <li>Automated repetitive DBA alerts and tasks using weekly auditing in coordination with the ITIL team and
-                cross-functional teams</li>
-            </ul>
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Technical Skills</h2>
-              <div class="flex-container">
-                <div class="flex-box">Database Administration</div>
-                <div class="flex-box">Data Management</div>
-                <div class="flex-box">Server Management</div>
-              </div>
-            </div>
-
-            <div class="skills-section px-3 px-lg-4">
-              <h2 class="h3 mb-1">Tools and Technologies</h2>
-              <div class="flex-container">
-                <div class="flex-box">Oracle</div>
-                <div class="flex-box">MSSQL</div>
-              </div>
-            </div>
-          </div>
         </div>
 
       </div>
@@ -777,22 +592,17 @@
 
             <!-- <h3 class="resume-title">Education</h3> -->
             <div class="resume-item">
-              <h4>LLM Courses (Online)</h4>
-              <h5>Deeplearning.ai</h5>
+              <h4>Machine Learning Professional (In-Progress)</h4>
+              <h5>Databricks</h5>
             </div>
             <div class="resume-item">
-              <h4>Cleaning Data in R Course</h4>
-              <h4>Inference for Categorical Data</h4>
-              <h4>Intermediate Python for Data Science</h4>
-              <h4>Intro to Statistics with R</h4>
-              <h4>Machine Learning Toolbox Course</h4>
-              <h4>Statistical Modeling in R (Part 1)</h4>
-              <h5>Data Camp</h5>
+              <h4>AI-102 AI Engineer Associate</h4>
+              <h5>Microsoft</h5>
             </div>
             <div class="resume-item">
+              <h4>Prompt Engineering</h4>
               <h4>ITIL Foundation</h4>
-              <h4>HIPAA Regulations</h4>
-              <h5>Tata Consultancy Services (Internal) </h5>
+              <h5>Coursera</h5>
             </div>
           </div>
         </div>
@@ -810,9 +620,9 @@
           <h4>Master of Science - Data Science and Computational Intelligence</h4>
           <!--<h5>January 2021 - March 2022</h5>-->
           <p><em>Coventry University, Coventry, UK</em></p>
-          <h4>Bachelor of Technology - Electrical and Electronics Engineering</h4>
+          <h4>Bachelor of Technology - Information Technology</h4>
           <!--<h5>2010 - 2014</h5>-->
-          <p><em>Pondicherry University, Puducherry, India</em></p>
+          <p><em>Anna University, Tiruchy, India</em></p>
         </div>
       </div>
 
