--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/prof_1.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Ramanathan Perumal</a></h1>
+        <h1 class="text-light"><a href="index.html"> Ramanathan Perumal </a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="https://twitter.com/kn1ghtf1re20" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a href="https://www.linkedin.com/in/ramanathan-perumal/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -179,12 +179,10 @@
                 <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Gen_AI/UCD_LLM"
                   target="_blank">
                   <img src="assets/img/genai.png" alt="Image 2" class="project-image">
-                  <div class="project-topic">UCD-LLM</div>
+                  <div class="project-topic">RAG-LLM</div>
                 </a>
               </div>
             </div>
-
-
 
           </div>
           <div class="swiper-pagination"></div>
@@ -555,8 +553,8 @@
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <!-- <h3 class="resume-title">Professional Experience</h3> -->
           <div class="resume-item">
-            <h4>Data Science Researcher | Centre for Computational Science and Mathematical Modelling</h4>
-            <h5>Sep'21 - Mar'22</h5>
+            <h4>Deep Learning</h4>
+            <h5>Sep'20 - May'21</h5>
             <p><em>Coventry University</em></p>
             <ul>
               <li> Performed research to develop an efficient ML model for identifying Chemical Reaction Network (CRN),
@@ -597,6 +595,7 @@
             </div>
             <div class="resume-item">
               <h4>AI-102 AI Engineer Associate</h4>
+              <h4>AZ-900 Azure Fundamentals</h4>
               <h5>Microsoft</h5>
             </div>
             <div class="resume-item">
