--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
           <!-- <li><a href="#beatbox" class="nav-link scrollto"><i class="bx bx-microphone"></i> <span>Beatbox</span></a></li> -->
           <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-microchip"></i> <span>Professional
                 Experience</span></a></li>
-          <li><a href="#research" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Research
-                Projects</span></a></li>
 
           <!-- <li><a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fkn1ghtf1re.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=skyliner.svg&icon_color=%2300FF06&title=Hits&edge_flat=false"/></a></li> -->
           <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Professional
@@ -166,7 +164,7 @@
 
             <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/E2E_Project/Edge%26AWSCloud"
+                <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
                   target="_blank">
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
                   <div class="project-topic">LLMOps - Chat Assistant</div>
@@ -176,7 +174,7 @@
 
             <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Gen_AI/UCD_LLM"
+                <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
                   target="_blank">
                   <img src="assets/img/genai.png" alt="Image 2" class="project-image">
                   <div class="project-topic">RAG-LLM</div>
@@ -205,7 +203,7 @@
           <div class="resume-item">
             <h4>AI & Data Consultant</h4>
             <h5>Jan'22 - Present</h5>
-            <p><em>Freelancing Clients (Europe & US)</em></p>
+            <p><em>Clients (Europe & US)</em></p>
             <h4><b>AI Career Assistant LLM Agent with Semantic Kernel, RAG, and Plugin Architecture</b></h4>
             <ul>
               <li>Designed and implemented a multi-step agent using Microsoft Semantic Kernel that orchestrates multiple AI plugins to extract, refine, and enrich user queries using Azure OpenAI (GPT-35-Turbo).</li>
