title and arch changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/prof_1.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html"> Ramanathan Perumal </a></h1>
+        <h1 class="text-light"><a href="index.html"> Ramanathan </a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="https://twitter.com/kn1ghtf1re20" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a href="https://www.linkedin.com/in/ramanathan-perumal/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
@@ -177,7 +177,7 @@
                 <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
                   target="_blank">
                   <img src="assets/img/genai.png" alt="Image 2" class="project-image">
-                  <div class="project-topic">RAG-LLM</div>
+                  <div class="project-topic"> RAG-LLM </div>
                 </a>
               </div>
             </div>
