--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </div>
 
           </div>
-          <div class="swiper-pagination"></div>
+         <!-- <div class="swiper-pagination"></div>-->
         </div>
 
       </div>
