section changes and removed unwanted links.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide">
+           <!-- <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
                 <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
                   target="_blank">
@@ -180,10 +180,10 @@
                   <div class="project-topic"> RAG-LLM </div>
                 </a>
               </div>
-            </div>
+            </div> -->
 
           </div>
-         <!-- <div class="swiper-pagination"></div>-->
+          <div class="swiper-pagination"></div>
         </div>
 
       </div>
@@ -211,8 +211,6 @@
               <li>Developed a QueryRefinerPlugin using LLMs to clean, rephrase, and restructure user queries, improving downstream plugin accuracy and LLM understanding.</li>
               <li>Integrated external web search capabilities via the Tavily API to fetch real-time learning resources related to user skill gaps.
               </li>
-              <li>Designed and implemented an adaptive thresholding mechanism in YOLOv8 to dynamically adjust detection
-                thresholds based on scene complexity and noise levels</li>
               <!--<li>Integrated object tracking algorithm to maintain consistent object identities across consecutive frames in real-time</li>-->
               <li>Implemented Redis caching mechanism at the agent level to avoid repeated calls for the same questions, reducing token usage and API latency.</li>
               <li>Instrumented OpenTelemetry-based observability to trace token usage, model latency, and Azure OpenAI cost metrics across plugin calls and agent executions.</li>
