checks the block

--- a/index.html
+++ b/index.html
@@ -164,23 +164,48 @@
 
             <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
+                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/E2E_Project/Edge%26AWSCloud"
                   target="_blank">
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
-                  <div class="project-topic">LLMOps - Chat Assistant</div>
+                  <div class="project-topic">MLOPS - IOT</div>
                 </a>
               </div>
             </div>
 
-           <!-- <div class="swiper-slide">
+            <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
+                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Gen_AI/UCD_LLM"
                   target="_blank">
                   <img src="assets/img/genai.png" alt="Image 2" class="project-image">
-                  <div class="project-topic"> RAG-LLM </div>
+                  <div class="project-topic">UCD-LLM</div>
                 </a>
               </div>
-            </div> -->
+            </div>
+
+
+            <div class="swiper-slide">
+              <div class="cont-item" data-aos="fade-left">
+                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/Face_Recognition"
+                  target="_blank">
+                  <img src="assets/img/face.png" alt="Image 3" class="project-image">
+                  <div class="project-topic">Face Recognition</div>
+                </a>
+              </div>
+            </div>
+
+
+
+            <div class="swiper-slide">
+              <div class="cont-item" data-aos="fade-right">
+                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/AI_Sensor_Fusion_Project"
+                  target="_blank">
+                  <img src="assets/img/ratci.png" alt="Image 4" class="project-image">
+                  <div class="project-topic">AI Sensor Fusion</div>
+                </a>
+              </div>
+            </div>
+
+
 
           </div>
           <div class="swiper-pagination"></div>
