index file changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="introduction-container" data-aos="fade-in">
       <h1>Ramanathan Perumal</h1>
       <p><span class="typed"
-          data-typed-items="AI Engineer , LLMOps Engineer, Data Engineer , Java Engineer"></span>
+          data-typed-items="AI Engineer , LLMOps Engineer, AI Consultant, Data Engineer , Java Engineer"></span>
       </p>
     </div>
   </section><!-- End Introduction -->
@@ -164,10 +164,10 @@
 
             <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Computer_Vision/E2E_Project/Edge%26AWSCloud"
+                <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
                   target="_blank">
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
-                  <div class="project-topic">MLOPS - IOT</div>
+                  <div class="project-topic">LLMOps - AI Assistant</div>
                 </a>
               </div>
             </div>
@@ -200,7 +200,7 @@
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <!-- <h3 class="resume-title">Professional Experience</h3> -->
           <div class="resume-item">
-            <h4>AI & Data Consultant</h4>
+            <h4>AI Consultant</h4>
             <h5>Jan'22 - Present</h5>
             <p><em>Clients (Europe & US)</em></p>
             <h4><b>AI Career Assistant LLM Agent with Semantic Kernel, RAG, and Plugin Architecture</b></h4>
