slide project removal

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
               </div>
             </div>
 
-            <div class="swiper-slide">
+            <!-- ======= <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
                 <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Gen_AI/UCD_LLM"
                   target="_blank">
@@ -180,7 +180,8 @@
                   <div class="project-topic">UCD-LLM</div>
                 </a>
               </div>
-            </div>
+            </div> ======= -->
+            
           </div>
           <div class="swiper-pagination"></div>
         </div>
