--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="introduction-container" data-aos="fade-in">
       <h1>Ramanathan Perumal</h1>
       <p><span class="typed"
-          data-typed-items="AI Engineer , LLMOps Engineer, AI Consultant, Data Engineer , Java Engineer"></span>
+          data-typed-items="AI Architect, AI Engineer, AI Consultant, LLMOps Engineer, ML Engineer, Data Engineer, Java Engineer"></span>
       </p>
     </div>
   </section><!-- End Introduction -->
