correcting minor changes

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
             to drive innovation and value across industries. An AI Engineer specializing in building end-to-end AI systems powered 
             by large language models (LLMs), retrieval-augmented generation (RAG), and cloud-native data platforms. 
             Hands-on experience with tools like Azure OpenAI, LangChain, Semantic Kernel, and Databricks to deliver intelligent search, 
-            document understanding, and conversational AI solutions.
+            document understanding, and conversational AI solutions.</p>
 
-            Bringing deep cross-domain experience in:
+          <p>Bringing deep cross-domain experience in:
             🔹 Oil & Gas – cloud-native lakehouses, real-time analytics, threat detection
             🔹 Capital Markets – risk systems modernization, secure enterprise data solutions
             🔹 Retail & E-commerce – intelligent search, summarization, customer-facing bots
