--- a/index.html
+++ b/index.html
@@ -105,13 +105,17 @@
             to drive innovation and value across industries. An AI Engineer specializing in building end-to-end AI systems powered 
             by large language models (LLMs), retrieval-augmented generation (RAG), and cloud-native data platforms. 
             Hands-on experience with tools like Azure OpenAI, LangChain, Semantic Kernel, and Databricks to deliver intelligent search, 
-            document understanding, and conversational AI solutions.</p>
+            document understanding, and conversational AI solutions.
+          </p>
 
-          <p>Bringing deep cross-domain experience in:
-            🔹 Oil & Gas – cloud-native lakehouses, real-time analytics, threat detection
-            🔹 Capital Markets – risk systems modernization, secure enterprise data solutions
-            🔹 Retail & E-commerce – intelligent search, summarization, customer-facing bots
-            🔹 Asset Management – large-scale data systems, SSO/LDAP integration
+
+          
+          <p> Bringing deep cross-domain experience in:
+            🔹 Infrastructure and Engineering – GenAI solution, automate document understanding intelligent chat-based interactions, integrated OCR, summarization, RAG pipelines.
+            🔹 Oil & Gas – cloud-native lakehouses, real-time analytics, threat detection.
+            🔹 Retail & E-commerce – intelligent search, summarization, customer-facing bots.
+            🔹 Capital Markets – risk systems modernization, secure enterprise data solutions.
+            🔹 Asset Management – large-scale data systems, SSO/LDAP integration.
             <!--As a professional in Artificial Intelligence Product Development and Data Product Development, I have a
             wide range of expertise in design, development and deployment of scalable AI solutions in Internet of Things
             (IoT) environment and Hybrid Environment (on-premise & Cloud). I have streamlined data management, data
