--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
             <div class="swiper-slide">
               <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/RamGitRepo/single_agent_ragsystem/blob/main/README.md"
+                <a href="https://github.com/RamGitRepo/mcp-agentsystem?tab=readme-ov-file"
                   target="_blank">
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
                   <div class="project-topic">LLMOps - AI Assistant</div>
