--- a/index.html
+++ b/index.html
@@ -208,9 +208,10 @@
             <h4>AI Consultant</h4>
             <h5>Jan'22 - Present</h5>
             <p><em>Clients (Europe & US)</em></p>
-            <h4><b>AI Career Assistant LLM Agent with Semantic Kernel, RAG, and Plugin Architecture</b></h4>
+            <h4><b>AI Career Assistant LLM Agent with Semantic Kernel, RAG, Plugin Architecture and MCP Protocol</b></h4>
             <ul>
-              <li>Designed and implemented a multi-step agent using Microsoft Semantic Kernel that orchestrates multiple AI plugins to extract, refine, and enrich user queries using Azure OpenAI (GPT-35-Turbo).</li>
+              <li>Designed and implemented a multi-step agent using Microsoft Semantic Kernel that orchestrates multiple AI plugins to extract, refine, and enrich user queries
+                with the help of MCP Protocol using Azure OpenAI.</li>
               <li>Integrated a CV Skill Extraction Plugin that uses a RAG-powered Azure Function to parse user resumes and extract technical and domain-specific skills</li>
               <li>Developed a QueryRefinerPlugin using LLMs to clean, rephrase, and restructure user queries, improving downstream plugin accuracy and LLM understanding.</li>
               <li>Integrated external web search capabilities via the Tavily API to fetch real-time learning resources related to user skill gaps.
@@ -241,6 +242,7 @@
                 <div class="flex-box">Semantic Kernel</div>
                 <div class="flex-box">Python</div>
                 <div class="flex-box">Function App</div>
+                <div class="flex-box">MCP Protocol</div>
                 <div class="flex-box">Event Trigger</div>
                 <div class="flex-box">FastAPI</div>
                 <div class="flex-box">AI services</div>
