--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             <h4>AI Consultant</h4>
             <h5>Jan'22 - Present</h5>
             <p><em>Clients (Europe & US)</em></p>
-            <h4><b>AI Career Assistant LLM Agent with Semantic Kernel, RAG, Plugin Architecture and MCP Protocol</b></h4>
+            <h4><b>AI Skill Assistant LLM Agent with Semantic Kernel, RAG, Plugin Architecture and MCP Protocol</b></h4>
             <ul>
               <li>Designed and implemented a multi-step agent using Microsoft Semantic Kernel that orchestrates multiple AI plugins to extract, refine, and enrich user queries
                 with the help of MCP Protocol using Azure OpenAI.</li>
