--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
               <div class="cont-item" data-aos="fade-left">
                 <a href="https://github.com/RamGitRepo/mcp-agentsystem?tab=readme-ov-file"
                   target="_blank">
+                  <img src="assets/img/Langgraphagent.Architecture.png" alt="Image 1" class="project-image">
+                  <div class="project-topic">PO AI Assistant</div>
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
-                  <div class="project-topic">LLMOps - AI Assistant</div>
+                  <div class="project-topic">CV Skill Assistant</div>
                 </a>
               </div>
             </div>
@@ -201,12 +203,56 @@
         <div class="section-title">
           <h2>Freelance Experience & Projects</h2>
         </div>
-
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <!-- <h3 class="resume-title">Professional Experience</h3> -->
           <div class="resume-item">
+            <h4>AI Architect/Engineer</h4>
+            <h5>Jan'25 - Present</h5>
+            <p><em>Clients (Europe & US)</em></p>
+            <h4><b>PO Agent API — Agentic Procurement Assistant (LangGraph + FastAPI + HITL)</b></h4>
+            <ul>
+              <li>A production-ready backend for an AI procurement assistant that can check inventory, look up policy rules, search the web for pricing, 
+                create purchase orders with human-in-the-loop approval, and summarize daily PO activity..</li>
+              <li>Integrated a Policy guidelines Extraction Plugin that uses a RAG-powered Azure Function to parse organization policy rules.</li>
+              <li>Developed a QueryRefinerPlugin using LLMs to clean, rephrase, and restructure user queries, improving downstream plugin accuracy and LLM understanding.</li>
+              <li>Integrated external web search capabilities via the Tavily API to fetch real-time material price related to users Product request.
+              </li>
+              <!--<li>Integrated object tracking algorithm to maintain consistent object identities across consecutive frames in real-time</li>-->
+              <li>Instrumented OpenTelemetry-based observability to trace token usage, model latency, and Azure OpenAI cost metrics across plugin calls and agent executions.</li>
+              <li>Orchestrated agent work flow that chains refine → search → approve(HITL) → search operations, returning structured responses like:</li>
+              <li>Developed a FastAPI endpoint (/api/agnt/chat) to serve frontend interfaces like React Js, enabling real-time interaction with the assistant.</li>
+            </ul>
+
+            <div class="skills-section px-3 px-lg-4">
+              <h2 class="h3 mb-1">Technical Skills</h2>
+              <div class="flex-container">
+                <div class="flex-box">Text Extraction</div>
+                <div class="flex-box">Data Ingestion</div>
+                <div class="flex-box">Retrieval Augmented Generation</div>
+                <div class="flex-box">Data Augmented</div>
+                <div class="flex-box">Semantic Aware chunking</div>
+                <div class="flex-box">Cache Mechanism</div>
+                <div class="flex-box">Observability</div>
+              </div>
+            </div>
+
+            <div class="skills-section px-3 px-lg-4">
+              <h2 class="h3 mb-1">Tools and Technologies</h2>
+              <div class="flex-container">
+                <div class="flex-box">LangGraph </div>
+                <div class="flex-box">Python</div>
+                <div class="flex-box">Function App</div>
+                <div class="flex-box">Event Trigger</div>
+                <div class="flex-box">FastAPI</div>
+                <div class="flex-box">AI services</div>
+                <div class="flex-box">Azure OpenAI</div>
+                <div class="flex-box">Azure Cloud</div>
+                <div class="flex-box">Redis</div>
+              </div>
+            </div>
+
             <h4>AI Consultant</h4>
-            <h5>Jan'22 - Present</h5>
+            <h5>Jan'23 - Dec'24</h5>
             <p><em>Clients (Europe & US)</em></p>
             <h4><b>AI Skill Assistant LLM Agent with Semantic Kernel, RAG, Plugin Architecture and MCP Protocol</b></h4>
             <ul>
