--- a/index.html
+++ b/index.html
@@ -163,9 +163,8 @@
           <h2>Industry Projects</h2>
         </div>
 
-        <div class="content-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
+        <div class="swiper-slide">
           <div class="swiper-wrapper">
-
               <div class="cont-item" data-aos="fade-left">
                   <img src="assets/img/Langgraphagent.Architecture.png" alt="Image 1" class="project-image">
                   <div class="project-topic">PO AI Assistant</div>
