--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <!-- <h3 class="resume-title">Professional Experience</h3> -->
           <div class="resume-item">
             <h4>AI Architect/Engineer</h4>
-            <h5>Jan'25 - Present</h5>
+            <h5>Apr'25 - Present</h5>
             <p><em>Clients (Europe & US)</em></p>
             <h4><b>PO Agent API — Agentic Procurement Assistant (LangGraph + FastAPI + HITL)</b></h4>
             <ul>
@@ -246,7 +246,7 @@
             </div>
 
             <h4>AI Consultant</h4>
-            <h5>Jan'23 - Dec'24</h5>
+            <h5>Jan'22 - Mar'25</h5>
             <p><em>Clients (Europe & US)</em></p>
             <h4><b>AI Skill Assistant LLM Agent with Semantic Kernel, RAG, Plugin Architecture and MCP Protocol</b></h4>
             <ul>
@@ -260,7 +260,7 @@
               <li>Implemented Redis caching mechanism at the agent level to avoid repeated calls for the same questions, reducing token usage and API latency.</li>
               <li>Instrumented OpenTelemetry-based observability to trace token usage, model latency, and Azure OpenAI cost metrics across plugin calls and agent executions.</li>
               <li>Orchestrated plugin-based flow that chains refine → retrieve → search operations, returning structured responses like:</li>
-              <li>Developed a FastAPI endpoint (/api/agtchat) to serve frontend interfaces like Streamlit, enabling real-time interaction with the assistant.</li>
+              <li>Developed a FastAPI endpoint (/api/agtchat) to serve frontend interfaces like React Js, enabling real-time interaction with the assistant.</li>
             </ul>
 
             <div class="skills-section px-3 px-lg-4">
