--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <div class="resume-item">
             <h4>AI Architect/Engineer</h4>
             <h5>Apr'25 - Present</h5>
-            <p><em>Clients (Europe & US)</em></p>
+            <p><em>Clients (UK & US)</em></p>
             <h4><b>PO Agent API — Agentic Procurement Assistant (LangGraph + FastAPI + HITL)</b></h4>
             <ul>
               <li>A production-ready backend for an AI procurement assistant that can check inventory, look up policy rules, search the web for pricing, 
@@ -212,7 +212,7 @@
               <li>Integrated external web search capabilities via the Tavily API to fetch real-time material price related to users Product request.
               </li>
               <!--<li>Integrated object tracking algorithm to maintain consistent object identities across consecutive frames in real-time</li>-->
-              <li>Instrumented OpenTelemetry-based observability to trace token usage, model latency, and Azure OpenAI cost metrics across plugin calls and agent executions.</li>
+              <li>Instrumented OpenTelemetry-based observability to trace token usage, model latency, and Azure OpenAI cost metrics across tools calls and agent executions.</li>
               <li>Orchestrated agent work flow that chains refine → search → approve(HITL) → search operations, returning structured responses like:</li>
               <li>Developed a FastAPI endpoint (/api/agnt/chat) to serve frontend interfaces like React Js, enabling real-time interaction with the assistant.</li>
             </ul>
@@ -220,13 +220,14 @@
             <div class="skills-section px-3 px-lg-4">
               <h2 class="h3 mb-1">Technical Skills</h2>
               <div class="flex-container">
-                <div class="flex-box">Text Extraction</div>
+                <div class="flex-box">OCR based Extraction</div>
                 <div class="flex-box">Data Ingestion</div>
                 <div class="flex-box">Retrieval Augmented Generation</div>
                 <div class="flex-box">Data Augmented</div>
                 <div class="flex-box">Semantic Aware chunking</div>
-                <div class="flex-box">Cache Mechanism</div>
+                <div class="flex-box">Memory Saver Mechanism</div>
                 <div class="flex-box">Observability</div>
+                <div class="flex-box">Evaluation</div>
               </div>
             </div>
 
@@ -241,7 +242,8 @@
                 <div class="flex-box">AI services</div>
                 <div class="flex-box">Azure OpenAI</div>
                 <div class="flex-box">Azure Cloud</div>
-                <div class="flex-box">Redis</div>
+                <div class="flex-box">SQL Data base</div>
+                <div class="flex-box">React Js</div>
               </div>
             </div>
 
@@ -289,6 +291,7 @@
                 <div class="flex-box">Azure OpenAI</div>
                 <div class="flex-box">Azure Cloud</div>
                 <div class="flex-box">Redis</div>
+                <div class="flex-box">React Js</div>
               </div>
             </div>
           </div>
