changes in file

--- a/index.html
+++ b/index.html
@@ -228,21 +228,24 @@
                 <div class="flex-box">Memory Saver Mechanism</div>
                 <div class="flex-box">Observability</div>
                 <div class="flex-box">Evaluation</div>
+                <div class="flex-box">SQLAlchemy</div>
               </div>
             </div>
 
             <div class="skills-section px-3 px-lg-4">
               <h2 class="h3 mb-1">Tools and Technologies</h2>
               <div class="flex-container">
-                <div class="flex-box">LangGraph </div>
+                <div class="flex-box">LangGraph</div>
+                <div class="flex-box">LangSmith</div>
                 <div class="flex-box">Python</div>
-                <div class="flex-box">Function App</div>
+                <div class="flex-box">Pydantic</div>
+                <div class="flex-box">Azure Function App</div>
                 <div class="flex-box">Event Trigger</div>
                 <div class="flex-box">FastAPI</div>
-                <div class="flex-box">AI services</div>
+                <div class="flex-box">Azure AI services</div>
                 <div class="flex-box">Azure OpenAI</div>
-                <div class="flex-box">Azure Cloud</div>
-                <div class="flex-box">SQL Data base</div>
+                <div class="flex-box">Azure Blob</div>
+                <div class="flex-box">Azure SQL Data base</div>
                 <div class="flex-box">React Js</div>
               </div>
             </div>
@@ -284,12 +287,12 @@
                 <div class="flex-box">Semantic Kernel</div>
                 <div class="flex-box">Python</div>
                 <div class="flex-box">Function App</div>
+                <div class="flex-box">Pydantic</div>
                 <div class="flex-box">MCP Protocol</div>
                 <div class="flex-box">Event Trigger</div>
                 <div class="flex-box">FastAPI</div>
-                <div class="flex-box">AI services</div>
+                <div class="flex-box">Azure AI services</div>
                 <div class="flex-box">Azure OpenAI</div>
-                <div class="flex-box">Azure Cloud</div>
                 <div class="flex-box">Redis</div>
                 <div class="flex-box">React Js</div>
               </div>
